# ansible-collection-mysql

./: .gitignore  .yamllint  LICENSE  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: libvirt.yml  molecule.yml
molecule/backup/: molecule.yml  side_effect.yml
molecule/clusterset/: install.yml  molecule.yml  side_effect.yml  verify.yml
molecule/common/: failover.yml  install.yml  prepare.yml  scaledown.yml  scaleup.yml  verify.yml
molecule/failover/: molecule.yml
molecule/install/: molecule.yml
molecule/mysqldump/: molecule.yml  side_effect.yml  verify.yml
molecule/scaledown/: molecule.yml
molecule/scaleup/: molecule.yml
molecule/update/: molecule.yml  side_effect.yml
molecule/xtrabackup/: side_effect.yml  verify.yml
playbooks/: backups.yml  cluster.yml  clusterset.yml  facts.yml  install.yml  mysql.yml  mysqlrouter.yml  prepare.yml  update.yml  update_cluster.yml  update_router.yml  vars.yml
playbooks/templates/: ansible.cnf  backup.j2.sh  restore.j2.sh
roles/: .gitignore
roles/cluster/defaults/: main.yml
roles/cluster/tasks/: main.yml
roles/cluster/templates/: cluster.cnf
roles/repo/defaults/: main.yml
roles/repo/meta/: main.yml
roles/repo/tasks/: main.yml
vars/: default.yml
