[tool.poetry]
name = "pokerops-mysql"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-plugin-export = "^1.8.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }
ansible = "^10.0.1"
molecule = "^24.6.0"
molecule-plugins = "^23.5.3"
yamllint = "^1.35.1"
netaddr = "^1.3.0"
docker = "^7.1.0"
libvirt-python = "^10.5.0"
lxml = "^5.2.2"
passlib = "^1.7.4"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
